src/App.scss
:root {
  --main-font: "Inter", sans-serif;
}

.page {
  &-wrapper {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    &__content {
      flex-grow: 1;
    }
  }
}

body {
  background-color: #16151c;
}

.text {
  font-family: var(--main-font);

  &--base {
    font-size: 16px;
    font-weight: 400;
    line-height: 1.2;
  }

  &--middle {
    font-size: 18px;
    font-weight: 400;
    line-height: 1.2;
  }
  &--center {
    text-align: center;
  }
  &--white {
    color: #fff;
  }
  &--gradient {
    background: linear-gradient(90deg, #949efd, #954fff, #bb70ff, #56a4ff);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }
  &--grey {
    color: #cacaca;
  }
  &--purple {
    color: #b886ef;
  }

  &--uppercase {
    text-transform: uppercase;
  }
}

.title {
  font-family: "Prosto One", sans-serif;
  &--small {
    font-size: 22px;
    font-weight: 400;
  }
  &--base {
    font-size: 48px;
    font-weight: 400;
    @media screen and (max-width: 768px) {
      font-size: 34px;
    }
  }

  &--white {
    color: #fff;
  }

  &--grey {
    color: #cacaca;
  }

  &--center {
    text-align: center;
  }

  &__desktop {
    @media screen and (max-width: 768px) {
      display: none;
    }
  }
}

.button {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  gap: 7px;
  width: 100%;
  &--buy {
    width: 200px;
    height: 47px;
    background: linear-gradient(2deg, #0b729f -108.41%, #7302ee -12.71%, #00b3ff 98.62%, #03b0fb 98.62%);
    border-radius: 14px;

    font-family: var(--main-font);
    font-size: 18px;
    font-weight: 500;
    color: #fff;

    text-transform: uppercase;
    position: relative;

    @media screen and (max-width: 1024px) {
      width: 130px;
      height: 30px;
      font-size: 14px;
      text-transform: unset;
    }
    &::before {
      content: "";
      width: calc(100% + 4px);
      height: calc(100% + 4px);
      display: block;

      position: absolute;
      left: -2px;
      top: -2px;

      border-radius: 16px;
      border: 1px solid #364ea4;
    }
    &::after {
      content: "";
      position: absolute;
      width: calc(100% + 8px);
      height: calc(100% + 8px);
      display: block;

      border-radius: 35px;
      background: rgba(4, 166, 236, 0.54);
      filter: blur(27px);

      z-index: 1;
    }
  }
  &--base {
    font-size: 18px;
    font-weight: 400;
    font-family: var(--main-font);

    height: 47px;
    max-width: 180px;

    padding: 0 27px;
  }
  &--transparent {
    border-radius: 14px;
    border: 1px solid #8563ab;
    color: #fff;
  }
  &__icon {
    width: 20px;
    height: 20px;
    object-fit: contain;
    &--blue {
      fill: #4d81ff;
    }
    &--pink {
      fill: #fd01d7;
    }
    &--purple {
      fill: #8d61f6;
    }
  }
  &__text {
    position: relative;
    z-index: 2;
  }
}

.container {
  max-width: 1270px;
  width: 100%;
  padding: 0 15px;
  margin: 0 auto;
}

.logo {
  display: flex;
  align-items: center;
  justify-content: center;
  &__img {
    width: 100%;
    height: 100%;
    object-fit: contain;
  }
}

.burger {
  width: 20px;
  height: 14px;

  position: relative;

  display: flex;
  align-items: center;
  justify-content: center;
  &:hover {
    cursor: pointer;
  }

  &__item {
    position: absolute;
    top: 0;
    left: 0;

    width: 100%;
    height: 2px;

    background: #fff;

    &:nth-child(1) {
      transition: 0.3s transform, 0.3s top;
    }

    &:nth-child(2) {
      top: calc(50% - 1px);

      transition: 0.3s left, 0.3s opacity, 0.5s visibility;
    }

    &:nth-child(3) {
      top: calc(100% - 2px);

      transition: 0.3s transform, 0.3s top;
    }
  }

  &--active {
    .burger__item {
      top: 6px;
      &:nth-child(1) {
        transform: rotate(45deg);
      }

      &:nth-child(2) {
        left: -10px;
        opacity: 0;
        visibility: hidden;
      }

      &:nth-child(3) {
        transform: rotate(-45deg);
      }
    }
  }
}

.header {
  position: sticky;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 10;
  &__logo {
    height: 30px;
  }
  &__burger {
    @media screen and (min-width: 1025px) {
      display: none;
    }
  }
  &__nav {
    @media screen and (max-width: 1024px) {
      position: fixed;
      width: 100%;
      background: rgba(#16151c, 0.9);
      backdrop-filter: blur(23px);

      top: 75px;
      left: 0;
      padding: 30px 15px;

      display: none;

      &--active {
        display: block;
      }
    }
  }
  &__button {
    @media screen and (max-width: 768px) {
      display: none;
    }
  }
  &__wrapper {
    height: 84px;
    display: flex;
    align-items: center;
    background: linear-gradient(143deg, rgba(13, 13, 13, 0.14) 1.25%, rgba(120, 95, 135, 0.16) 79.53%);
    backdrop-filter: blur(23px);

    @media screen and (max-width: 1024px) {
      height: 75px;
    }
  }
  &__row {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 20px;
  }
  &__buttons {
    display: flex;
    align-items: center;
    gap: 20px;
  }
}

.nav {
  &__list {
    display: flex;
    align-items: center;
    gap: 28px;

    @media screen and (max-width: 1024px) {
      flex-direction: column;
    }
  }
  &__link {
    font-family: var(--main-font);
    font-size: 18px;
    font-weight: 400;
    line-height: 1;
    color: #cacaca;
    white-space: nowrap;

    transition: 0.3s color;
    &:hover {
      color: #fff;
    }
  }
}
/* ... */

